--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -2,5 +2,8 @@
   "name": "@te/tailwind-config",
   "version": "0.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  }
 }
