--- a/packages/core-react/package.json
+++ b/packages/core-react/package.json
@@ -26,5 +26,8 @@
     "tailwindcss": "^3.2.4",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
