--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@te/tsconfig",
   "version": "0.0.0",
-  "private": true,
   "files": [
     "base.json",
     "nextjs.json",
     "react-library.json"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
