--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,9 @@
     "lint": {
       "outputs": []
     },
+    "type-check": {
+      "cache": false
+    },
     "dev": {
       "cache": false
     },
