--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "type-check": "turbo type-check",
     "changeset": "changeset",
     "version-packages": "changeset version",
     "release": "turbo run build lint && changeset version && changeset publish"
