--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "type-check": "turbo type-check",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build lint && changeset version && changeset publish"
+    "release": "turbo run build lint && changeset publish"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.25.2",
     "eslint-config-custom": "*",
     "prettier": "latest",
