--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "type-check": "turbo type-check",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build lint && changeset publish"
+    "release": "turbo run build lint && changeset publish",
+    "changelog:root": "node ./scripts/changelog.js"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.25.2",
+    "@octokit/rest": "^19.0.5",
     "eslint-config-custom": "*",
     "prettier": "latest",
     "prettier-plugin-tailwindcss": "^0.2.0",
