--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,16 +10,18 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@mdx-js/loader": "^2.1.5",
-    "@mdx-js/react": "^2.1.5",
-    "@next/mdx": "^13.0.5",
+    "@te/core": "*",
+    "glob": "^8.0.3",
+    "gray-matter": "^4.0.3",
     "next": "13.0.0",
+    "next-mdx-remote": "^4.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@te/core": "*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@te/tailwind-config": "*",
+    "@te/tsconfig": "*",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
@@ -27,9 +29,7 @@
     "eslint": "7.32.0",
     "eslint-config-te": "*",
     "postcss": "^8.4.19",
-    "@te/tailwind-config": "*",
     "tailwindcss": "^3.2.4",
-    "@te/tsconfig": "*",
     "typescript": "^4.5.3"
   }
 }
