--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -5,5 +5,8 @@
   "license": "MIT",
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.4"
   }
 }
