--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -13,10 +13,12 @@
     "@te/core": "*",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
+    "hast-util-to-html": "^8.0.3",
     "next": "13.0.0",
     "next-mdx-remote": "^4.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "refractor": "^4.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
