--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -18,7 +18,8 @@
     "next-mdx-remote": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "refractor": "^4.8.0"
+    "refractor": "^4.8.0",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
