--- a/packages/core-react/package.json
+++ b/packages/core-react/package.json
@@ -30,5 +30,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@radix-ui/react-accordion": "^1.0.1",
+    "@radix-ui/react-icons": "^1.1.1"
   }
 }
