feature: Change core-react lib build process

--- a/packages/core-react/package.json
+++ b/packages/core-react/package.json
@@ -3,14 +3,17 @@
   "version": "0.0.1",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "files": [
+    "dist/"
+  ],
   "exports": {
     ".": "./dist",
     "./styles.css": "./dist/styles.css"
   },
   "license": "MIT",
   "scripts": {
-    "build": "tsup ./src/index.ts --format cjs --dts --external react",
-    "dev": "concurrently \"tsup ./src/index.ts --format esm,cjs --dts --external react --watch\" \"tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch\"",
+    "build": "tsup",
+    "dev": "concurrently \"tsup --watch\" \"tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch\"",
     "lint": "TIMING=1 eslint \"**/*.ts*\"",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "type-check": "tsc --noEmit"
