--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -13,14 +13,17 @@
     "@te/core": "*",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
+    "hast-util-has-property": "^2.0.0",
     "hast-util-to-html": "^8.0.3",
+    "hast-util-to-string": "^2.0.0",
     "next": "13.0.0",
     "next-mdx-remote": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "refractor": "^4.8.0",
     "rehype-slug": "^5.1.0",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "unist-util-visit": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
