--- a/packages/core-react/package.json
+++ b/packages/core-react/package.json
@@ -1,22 +1,20 @@
 {
   "name": "@te/core",
   "version": "0.0.1",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist/**"
+    "dist/"
   ],
   "exports": {
-    ".": "./dist/index.js",
-    "./button": "./dist/button/index.js",
-    "./accordion": "./dist/accordion/index.js",
+    ".": "./dist",
     "./styles.css": "./dist/styles.css"
   },
   "license": "MIT",
   "scripts": {
-    "build": "tsup",
-    "dev": "concurrently \"tsup --watch\" \"tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch\"",
+    "build": "tsup src/index.ts --format esm,cjs --dts --external react",
+    "dev": "concurrently \"tsup src/index.ts --format esm,cjs --watch --dts --external react\" \"tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch\"",
     "lint": "TIMING=1 eslint \"**/*.ts*\"",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "type-check": "tsc --noEmit"
