--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -18,10 +18,13 @@
     "hast-util-has-property": "^2.0.0",
     "hast-util-to-html": "^8.0.3",
     "hast-util-to-string": "^2.0.0",
+    "i18next": "^22.4.6",
     "next": "13.0.0",
+    "next-i18next": "^13.0.2",
     "next-mdx-remote": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.1",
     "refractor": "^4.8.0",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
