--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
+    "react-live": "^3.1.1",
     "refractor": "^4.8.0",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
