--- a/packages/core-react/package.json
+++ b/packages/core-react/package.json
@@ -37,6 +37,8 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.0.1",
-    "@radix-ui/react-icons": "^1.1.1"
+    "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-icons": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.1.0"
   }
 }
