--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -13,7 +13,7 @@
     "@radix-ui/react-scroll-area": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.2",
     "@te/core": "*",
-    "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
     "copy-to-clipboard": "^3.3.3",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
