--- a/packages/core-react/package.json
+++ b/packages/core-react/package.json
@@ -40,6 +40,6 @@
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.1.0",
-    "classnames": "^2.3.2"
+    "clsx": "^1.2.1"
   }
 }
